Sorting out the swagger UI.

--- a/backend/webapp/src/main/webapp/about/index.html
+++ b/backend/webapp/src/main/webapp/about/index.html
@@ -81,6 +81,17 @@
         <li>
             <p>
                 <b>
+                    <a href="frontend/index.html">frontend/</a>
+                </b>
+            </p>
+            <p>
+                is a webapp built with <a href="ionicframework.com/">Ionic framework</a>, so can be developed as a webapp
+                but then deployed as an iPhone or Android app (leveraging Apache Cordova).
+            </p>
+        </li>
+        <li>
+            <p>
+                <b>
                     <a href="swagger-ui/index.html">swagger-ui/</a>
                 </b>
             </p>
