--- a/backend/webapp/src/main/webapp/about/index.html
+++ b/backend/webapp/src/main/webapp/about/index.html
@@ -81,17 +81,6 @@
         <li>
             <p>
                 <b>
-                    <a href="frontend/index.html">frontend/</a>
-                </b>
-            </p>
-            <p>
-                is a webapp built with <a href="ionicframework.com/">Ionic framework</a>, so can be developed as a webapp
-                but then deployed as an iPhone or Android app (leveraging Apache Cordova).
-            </p>
-        </li>
-        <li>
-            <p>
-                <b>
                     <a href="swagger-ui/index.html">swagger-ui/</a>
                 </b>
             </p>
@@ -107,6 +96,17 @@
             <p>The RESTful API can return both simple representations and also richer hypermedia representations
                 that are conformant with the <a href="http://restfulobjects.org">Restful Objects</a> spec.
                 The HTTP <code>Accept</code> header is used to select which representation should be generated.
+            </p>
+        </li>
+        <li>
+            <p>
+                <b>
+                    <a href="frontend/index.html">frontend/</a>
+                </b>
+            </p>
+            <p>
+                is a webapp built with <a href="ionicframework.com/">Ionic framework</a> that accesses the REST API.
+                This webapp can be developed as a webapp but deployed as an iPhone or Android app.
             </p>
         </li>
     </ul>
