minor doc update, correct to user/pass on index.html

--- a/backend/webapp/src/main/webapp/about/index.html
+++ b/backend/webapp/src/main/webapp/about/index.html
@@ -112,7 +112,7 @@
     </ul>
 
     <p>
-        The default user/password is <b><i>todoapp-admin/pass</i></b>.
+        The default user/password is <b><i>contactapp-admin/pass</i></b>.
     </p>
 
 </div>
