--- a/backend/webapp/src/main/webapp/frontend/index.html
+++ b/backend/webapp/src/main/webapp/frontend/index.html
@@ -12,6 +12,8 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
+    <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
+    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
