--- a/backend/webapp/src/main/webapp/swagger-ui/index.html
+++ b/backend/webapp/src/main/webapp/swagger-ui/index.html
@@ -125,9 +125,9 @@
                 <div class='input'><input placeholder="user" id="input_user" name="user" type="text" size="10"/></div>
                 <div class='input'><input placeholder="pass" id="input_pass" name="pass" type="password" size="10"/></div>
                 <select id="input_baseUrl" name="baseUrl" style="height: 26px;">
-                    <option id="public" label="public" value="/restful/swagger/public"/>
-                    <option id="private" label="private" value="/restful/swagger/private"/>
-                    <option id="prototyping" label="prototyping" value="/restful/swagger/prototyping"/>
+                    <option id="public" label="public" value="../../restful/swagger/public"/>
+                    <option id="private" label="private" value="../../restful/swagger/private"/>
+                    <option id="prototyping" label="prototyping" value="../../restful/swagger/prototyping"/>
                 </select>
             </div>
             <div class='input' style="display:none;"><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
