--- a/backend/webapp/src/main/webapp/frontend/index.html
+++ b/backend/webapp/src/main/webapp/frontend/index.html
@@ -23,6 +23,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/util.js"></script>
+    <script src="js/http.js"></script>
     <script src="js/authentication.js"></script>
     <script src="js/controllers.js"></script>
   </head>
