--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -25,6 +25,7 @@
     <script src="js/app.js"></script>
     <script src="js/util.js"></script>
     <script src="js/http.js"></script>
+    <script src="js/backend.js"></script>
     <script src="js/authentication.js"></script>
     <script src="js/controllers.js"></script>
   </head>
