ELI-8: Factoring out an OfflineService so can clear cache.

--- a/backend/webapp/src/main/webapp/frontend/index.html
+++ b/backend/webapp/src/main/webapp/frontend/index.html
@@ -24,6 +24,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/util.js"></script>
+    <script src="js/offline.js"></script>
     <script src="js/http.js"></script>
     <script src="js/backend.js"></script>
     <script src="js/authentication.js"></script>
