--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -28,7 +28,9 @@
     <script src="js/http.js"></script>
     <script src="js/backend.js"></script>
     <script src="js/authentication.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/contacts.js"></script>
+    <script src="js/options.js"></script>
+    <script src="js/about.js"></script>
   </head>
   <body ng-app="starter">
     <!--
