--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -32,7 +32,7 @@
     <script src="js/options.js"></script>
     <script src="js/about.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="ecp-contactapp">
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
