--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -24,13 +24,13 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/util.js"></script>
-    <script src="js/offline.js"></script>
-    <script src="js/http.js"></script>
-    <script src="js/backend.js"></script>
-    <script src="js/authentication.js"></script>
-    <script src="js/contacts.js"></script>
-    <script src="js/options.js"></script>
-    <script src="js/about.js"></script>
+    <script src="js/services/offline.js"></script>
+    <script src="js/services/http.js"></script>
+    <script src="js/services/backend.js"></script>
+    <script src="js/services/authentication.js"></script>
+    <script src="js/controllers/contacts.js"></script>
+    <script src="js/controllers/options.js"></script>
+    <script src="js/controllers/about.js"></script>
   </head>
   <body ng-app="ecp-contactapp">
     <!--
