--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -24,6 +24,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/util.js"></script>
+    <script src="js/services/preferences.js"></script>
     <script src="js/services/offline.js"></script>
     <script src="js/services/http.js"></script>
     <script src="js/services/backend.js"></script>
