ELI-46: 'admin' and 'reader' user; corresponding equivalent roles; lock the default 'isis-module-security-admin' user; don't use app tenancy (all users in the global app tenancy).
Also update the welcome.html

--- a/backend/webapp/src/main/resources/org/incode/eurocommercial/contactapp/webapp/welcome.html
+++ b/backend/webapp/src/main/resources/org/incode/eurocommercial/contactapp/webapp/welcome.html
@@ -18,14 +18,18 @@
   under the License.
 -->
 <p class="intro">
-    <a href="http://isis.apache.org" target="_blank">Apache Isis</a>&trade; is a platform to let you rapidly develop
-    domain-driven apps in Java.
 
+    This is a contact management app developed for <a href="http://eurocommercialproperties.com">EuroCommercial</a>.
+    It comprises a front-end mobile app (for iPhone and Android) along with this, the back-end administration app.
     <br/>
     <br/>
-    This is a quickstart app consisting of a single <code>QuickObject</code> domain entity, integrated with a number of <a href="http://isisaddons.org" target="_blank">Isis Addons</a> modules and UI components.
-
+    The app is implemented using <a href="http://isis.apache.org" target="_blank">Apache Isis</a>&trade; for the
+    back-end, with <a href="http://ionicframework.com">Ionic Framework</a> for the front-end.
     <br/>
     <br/>
-    For more details, visit this quickstart app's <a href="http://github.com/isisaddons/isis-app-quickstart" target="_blank">repo on github</a>.
+    The software is open source (<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache v2.0</a>) with the
+    source code hosted at <a href="http://github.com/incodehq/contactapp" target="_blank">github</a>.
+    <br/>
+    <br/>
+    The software was developed by <a href="http://incode.org">incode</a>.
 </p>
