--- a/backend/webapp/src/main/webapp/mobile/tos.html
+++ b/backend/webapp/src/main/webapp/mobile/tos.html
@@ -1,16 +1,17 @@
-<ion-navbar *navbar>
-    <ion-title>
-        Home
-    </ion-title>
-</ion-navbar>
 
-<ion-content class="home">
-    <ion-card>
-        <ion-card-header>
-            Card Header
-        </ion-card-header>
-        <ion-card-content>
-            Hello World
-        </ion-card-content>
-    </ion-card>
-</ion-content>
+<html>
+<header><title>This is title</title></header>
+<body>
+
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lacus diam, rutrum ornare accumsan vitae, molestie id tortor. Sed vel nulla nec felis porta scelerisque sed sit amet quam. Aliquam pharetra vulputate interdum. Quisque vestibulum arcu sollicitudin erat pharetra, consequat accumsan est ullamcorper. Nullam pharetra sem sed erat pellentesque dignissim. Curabitur et mauris vitae tortor faucibus scelerisque ut a magna. Integer ut sem ut odio fringilla vulputate. Quisque massa eros, volutpat et egestas vel, laoreet vitae nibh.
+
+Vivamus ac massa mollis, pharetra felis quis, mollis erat. Integer consectetur lorem eros. Duis vestibulum libero erat, vitae accumsan lorem porttitor ac. Donec a augue nisi. Vivamus non rhoncus orci. Quisque mollis, odio eget vestibulum cursus, sem neque efficitur augue, consequat fermentum arcu velit nec mauris. Nam ac eros euismod, vestibulum nibh nec, placerat tellus. Donec semper in erat vel elementum. Morbi vehicula, libero in cursus ornare, eros lacus pretium justo, sed varius nunc nisi sit amet ex. Fusce lacinia commodo varius.
+
+Fusce at velit sapien. Phasellus et sem tristique, condimentum neque nec, auctor neque. Vestibulum quis volutpat sem. Praesent pellentesque accumsan orci ut fringilla. Quisque malesuada est vel aliquam facilisis. Integer sed consectetur nunc. Ut ullamcorper tellus dignissim velit tincidunt imperdiet. Vestibulum eget rhoncus enim. Pellentesque accumsan libero et nunc tristique finibus. Nullam turpis arcu, laoreet rutrum dapibus vel, posuere sed neque. Curabitur erat elit, auctor vel neque varius, sagittis vulputate nisi. Mauris tempus nec orci id eleifend. Aliquam vitae augue eu eros gravida suscipit eget eget lorem. Nulla luctus tincidunt venenatis. Aliquam consequat varius ornare. Praesent rhoncus consequat nisi, non lacinia nisi pretium eu.
+
+Integer blandit malesuada felis, nec semper justo blandit sed. Duis non iaculis nisi, id tempor enim. Proin porta pretium fringilla. Ut in hendrerit elit. Sed a nisi eros. Nullam quis ex sem. Maecenas vestibulum libero ac nulla facilisis, quis interdum leo dapibus.
+
+Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam ut orci felis. Donec quis ipsum augue. Phasellus eget massa a libero hendrerit pulvinar vel fermentum nisl. Maecenas augue purus, aliquam vel semper quis, tempor in orci. Sed at magna nec neque semper facilisis at vel magna. Mauris laoreet pharetra erat, sit amet rhoncus felis finibus sed. Suspendisse potenti. Proin vel lorem quam. Mauris id mauris congue, blandit erat ut, tempor purus. Integer sit amet magna sed lacus pulvinar bibendum.
+</body>
+</html>
